--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en" ng-app="AnnotatedTutorial">
-<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>-->
   <head>
     <meta charset="UTF-8">
     <title>Annotated Tutorial</title>
@@ -45,7 +44,7 @@
                ng-repeat="step in listOfSteps"
                ng-mouseenter="hover = true"
                ng-mouseleave="hover = false"
-               ng-if="step.step_number!== listOfSteps.length"
+               ng-if="step.step_number<listOfSteps.length-1"
                ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1}">
 
             <!-- Buttons to toggle on/off notes -->
@@ -94,27 +93,37 @@
                 </div>
                 <div id="{{tutorial.steps[tutorial.steps.length-2].id}}" ng-if="(step.step_number==(tutorial.steps.length-2))"></div>
               <div class="main-content" ng-bind-html="step.html"></div>
+              </div><!--
 
-              <!-- Step's notes, if toggled on -->
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'corrections'" ng-show="showCorrections" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'methods'" ng-show="showMethods" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'details'" ng-show="showDetails" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'questions'" ng-show="showQuestions" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'other'" ng-show="showOther" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-            </div><!--
+              --><div class="note-container grid__item three-tenths" ng-style="{height: 710 + 'px'}" ng-if="listOfSteps.indexOf(step)===0">
+                  <!-- Step's notes, if toggled on-->
+                  <div ng-repeat="step in listOfSteps">
+                  <h2 ng-if="(step.step_number==0)">INTRO</h2>
+                  <h2 ng-if="step.step_number==(tutorial.steps.length-1)">WHOLE</h2>
+                  <h2 ng-if="(step.step_number==tutorial.steps.length-2)">END</h2>
+                  <h2 ng-if="step.step_number>0 && step.step_number<listOfSteps.length-2">STEP {{step.step_number}}</h2>
+                  <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'corrections'" ng-show="showCorrections" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+                  <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'methods'" ng-show="showMethods" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+                  <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'details'" ng-show="showDetails" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+                  <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'questions'" ng-show="showQuestions" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+                  <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'other'" ng-show="showOther" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+                  </div>
+               </div><!--
 
             --><div class="grid__item one-eighth input-start-container" ng-if="!tutorial.baseline" ng-show="hover && selectedLine != $index">
                <!-- Button for adding a note -->
                <button class="input-start icon" ng-if="inputPos === null" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" tooltip="Add a note"></button></div>
-          </div>
-        </div><!--
+          </div><!--
 
-        --><div class="baseline-container grid__item three-tenths" ng-style="{height: windowHeight + 'px'}" ng-if="tutorial.baseline">
-            <div ng-if="tutorial.notes">
-              <h2>Comments</h2>
-              <note ng-repeat="note in tutorial.notes" ng-if="!note.reply_to && canShowNote(note)" note="note" add-reply="addingReply" can-show-note="canShowNote" baseline="true"></note>
+         <div class="note-container grid__item three-tenths" ng-style="{height: windowHeight + 'px'}">
+
+              <div ng-if="tutorial.notes">
+              <!--<h2>Comments</h2>
+              <div ng-repeat="step in listOfSteps">
+                  <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'corrections'" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+              </div>
             </div>
-            <div class="submit-comment-container">
+            <!--<div class="submit-comment-container">
               <h2>Submit a comment</h2>
               <textarea class="input-text" ng-model="$parent.newNote" rows="4" placeholder="Please enter your comment here."></textarea>
               <button ng-click="submitNote()" class="plain-button">Submit</button>
