--- a/app/index.html
+++ b/app/index.html
@@ -105,21 +105,23 @@
 
               <div ng-if="tutorial.notes">
               <h2 class="filter-title">Notes</h2>
-              <select class="dropdown" id="filter" onchange="filterSelected()">
-              <option value="new" selected>DATE:NEWEST</option>
-              <option value="old">DATE:OLDEST</option>
-              <option value="high">RATE:HIGHEST</option>
-              <option value="low">RATE:LOWEST</option>
+              <button class="note-display" ng-click="newSort()">SORT</button>
+              <button class="note-display">FILTER</button>
+              <br>
+              <select class="dropdown" id="sort" onchange="sortSelected()">
+              <option value="new" selected>RECENT</option>
+              <option value="old">OLDEST</option>
+              <option value="high">RATE:HIGH</option>
+              <option value="low">RATE:LOW</option>
               </select>
-              <button ng-click="newFilter()">Filter</button>
               <note ng-repeat="note in listOfNotes" ng-if="!tutorial.baseline && canShowNote(note)" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
               </div>
 
               <script>
-                  var chosenFilter = null;
-                  function filterSelected(){
-                      chosenFilter = document.getElementById("filter").value.toString();
-                      console.log(chosenFilter);
+                  var chosenSort = null;
+                  function sortSelected(){
+                      chosenSort = document.getElementById("sort").value.toString();
+                      console.log(chosenSort);
                   }
               </script>
 
