--- a/app/index.html
+++ b/app/index.html
@@ -106,22 +106,43 @@
               <div ng-if="tutorial.notes">
               <h2 class="filter-title">Notes</h2>
               <button class="note-display" ng-click="newSort()">SORT</button>
-              <button class="note-display">FILTER</button>
+              <button class="note-display" ng-click="newFilter(null)">FILTER</button>
+              <button ng-click="clear()">CLEAR</button>
               <br>
+              <label>
               <select class="dropdown" id="sort" onchange="sortSelected()">
               <option value="new" selected>RECENT</option>
               <option value="old">OLDEST</option>
               <option value="high">RATE:HIGH</option>
               <option value="low">RATE:LOW</option>
               </select>
+              </label>
+              <label>
+              <select class="dropdown" id="filter" onchange="filterSelected()">
+                      <option style="display:none">STEP</option>
+                      <option value="{{tutorial.steps.length-1}}">WHOLE</option>
+                      <option value="0">INTRO</option>
+                      <option ng-repeat="number in listOfSteps"
+                              value="{{number.step_number}}"
+                              ng-if="number.step_number>0 && number.step_number<listOfSteps.length-2">
+                              {{number.step_number}}
+                      </option>
+                      <option value="{{tutorial.steps.length-2}}">END</option>
+              </select>
+              </label>
               <note ng-repeat="note in listOfNotes" ng-if="!tutorial.baseline && canShowNote(note)" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+              </div>
               </div>
 
               <script>
                   var chosenSort = null;
                   function sortSelected(){
                       chosenSort = document.getElementById("sort").value.toString();
-                      console.log(chosenSort);
+                  }
+
+                  var chosenFilter = null;
+                  function filterSelected(){
+                      chosenFilter = parseInt(document.getElementById("filter").value);
                   }
               </script>
 
