sort by category

--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
                       <option value="old">OLDEST</option>
                       <option value="high">RATE:HIGH</option>
                       <option value="low">RATE:LOW</option>
+                      <option value="category">CATEGORY</option>
                       </select>
                       </label>
                       <label>
