--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
             <!-- Buttons to toggle on/off notes -->
               <div class="grid__item one-eighth is-right-aligned">
 
-              <button class="icon icon-corrections"
+              <!--<button class="icon icon-corrections"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'corrections')"
                       ng-click="stepIcon(step.step_number);newFilter('corrections')"
                       tooltip="Corrections">
@@ -83,7 +83,7 @@
                       ng-click="stepIcon(step.step_number);newFilter('other')"
                       tooltip="Other">
                       <div class="icon__number">{{numberOfNotes(step,"other")}}</div>
-              </button>
+              </button>-->
 
               </div><!--
 
@@ -217,7 +217,7 @@
               </div>
 
               <div ng-show="showTextarea || replyTo!==null">
-                <div class="description"  ng-if="!tutorial.baseline">
+                <div class="description"  ng-if="!tutorial.baseline && replyTo==null">
                   <div ng-if="inputCategory == 'corrections'">Found a mistake? Help us out by pointing it out!</div>
                   <div ng-if="inputCategory == 'methods'">Information specific to software. Point out useful tools or other ways of doing the tutorial.</div>
                   <div ng-if="inputCategory == 'details'">Useful information that may help others understand and learn from the tutorial.</div>
@@ -230,7 +230,8 @@
                   <input type="text" ng-model="$parent.$parent.extraInput"/>
                 </div>
                 <div ng-if="replyTo!=null">
-                      <div class="close-button close-button-second" ng-click="closeInput()">Close</div>
+                      <div class="close-button reply-close" ng-click="closeInput()">Close</div>
+                      <br>
                 </div>
                 <textarea class="input-text" ng-model="$parent.newNote" rows="6" placeholder="Please enter your note here."></textarea>
                 <button ng-click="submitNote()" class="plain-button">Submit</button>
