fixed date sorting

--- a/app/index.html
+++ b/app/index.html
@@ -146,7 +146,8 @@
                             baseline="false"
                             show-list="showStepList"
                             user="contributor"
-                            whole-tutorial=""></note>
+                            whole-tutorial=""
+                            date="dateFormat(note)"  ></note>
                       </div>
                   </div>
           </div>
